Make paper container go off screen. Change nav bar to be fixed

--- a/src/assets/stylesheets/mixins/patterns.scss
+++ b/src/assets/stylesheets/mixins/patterns.scss
@@ -1,6 +1,11 @@
+$margin-offset: 1em;
+$inner-padding: 1em;
+
 @mixin paper-container {
   @include apply-grid;
   @include paper;
-  margin: 1em;
-  padding: 1em;
+  margin: $margin-offset;
+  margin-top: -$margin-offset;
+  padding: $inner-padding;
+  padding-top: 4em;
 }
