--- a/src/index.scss
+++ b/src/index.scss
@@ -28,7 +28,7 @@ body {
 }
 
 h1 {
-  font-weight: 300;
+  font-weight: 400;
   font-size: $h1-font-size;
   text-transform: uppercase;
   margin: 10px 0;
